po: update po/en_GB/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/en_GB/case.po
+++ b/po/en_GB/case.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-21 14:08+0000\n"
+"Last-Translator: Andi Chandler <andi@gowling.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -295,7 +295,7 @@ msgstr "%1 Saved"
 
 #: CRM/Case/Form/ActivityToCase.php CRM/Case/XMLProcessor/Report.php
 msgid "With Contact(s)"
-msgstr ""
+msgstr "With Contact(s)"
 
 #: CRM/Case/Form/ActivityView.php
 msgid "Activity Revision History"
@@ -387,11 +387,11 @@ msgstr "Activity Dates - From"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Deleted Activities"
-msgstr ""
+msgstr "Deleted Activities"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Select Contact"
-msgstr ""
+msgstr "Select Contact"
 
 #: CRM/Case/Form/EditClient.php
 msgid "Reassign Case"
@@ -604,31 +604,31 @@ msgstr "Case Resources"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Max Instances"
-msgstr ""
+msgstr "Max Instances"
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
-msgstr ""
+msgstr "Add activity type"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
-msgstr ""
+msgstr "WARNING: The case type name includes deprecated characters."
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid ""
 "WARNING: If any external files or programs reference the old \"Name\", then "
 "they must be updated manually."
-msgstr ""
+msgstr "WARNING: If any external files or programs reference the old \"Name\", then they must be updated manually."
 
 #: ang/crmCaseType/edit.html
 msgid ""
 "Use this screen to define or update the Case Roles, Activity Types, and "
 "Timelines for a case type."
-msgstr ""
+msgstr "Use this screen to define or update the Case Roles, Activity Types, and Timelines for a case type."
 
 #: ang/crmCaseType/edit.html
 msgid "Learn more..."
-msgstr ""
+msgstr "Learn more..."
 
 #: ang/crmCaseType/edit.html templates/CRM/Case/Form/CaseView.tpl
 msgid "Roles"
@@ -636,41 +636,41 @@ msgstr "Roles"
 
 #: ang/crmCaseType/edit.html
 msgid "Add..."
-msgstr ""
+msgstr "Add..."
 
 #: ang/crmCaseType/edit.html
 msgid "Timeline"
-msgstr ""
+msgstr "Timeline"
 
 #: ang/crmCaseType/edit.html
 msgid "Sequence"
-msgstr ""
+msgstr "Sequence"
 
 #: ang/crmCaseType/list.html
 msgid ""
 "A Case Type describes a group of related tasks, interactions, or processes."
-msgstr ""
+msgstr "A Case Type describes a group of related tasks, interactions, or processes."
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Assign to Creator"
-msgstr ""
+msgstr "Assign to Creator"
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Is Manager"
-msgstr ""
+msgstr "Is Manager"
 
 #: ang/crmCaseType/rolesTable.html
 msgid "Add role"
-msgstr ""
+msgstr "Add role"
 
 #: ang/crmCaseType/timelineTable.html
 msgid "Reference"
-msgstr ""
+msgstr "Reference"
 
 #: ang/crmCaseType.js
 msgid ""
 "The CiviCase XML file for this case-type prohibits editing the definition."
-msgstr ""
+msgstr "The CiviCase XML file for this case-type prohibits editing the definition."
 
 #: templates/CRM/Case/Audit/Audit.tpl
 msgid "Incomplete"
@@ -1095,88 +1095,88 @@ msgstr "Your Case Role(s)"
 
 #: CRM/Case/DAO/CaseActivity.php
 msgid "Case Activity ID"
-msgstr ""
+msgstr "Case Activity ID"
 
 #: CRM/Case/DAO/CaseContact.php
 msgid "Case Contact ID"
-msgstr ""
+msgstr "Case Contact ID"
 
 #: CRM/Case/Form/CaseView.php
 msgid "(opened %1)"
-msgstr ""
+msgstr "(opened %1)"
 
 #: CRM/Case/Form/Task/Delete.php CRM/Case/Info.php CRM/Case/Task.php
 msgid "Delete cases"
-msgstr ""
+msgstr "Delete cases"
 
 #: CRM/Case/Info.php
 msgid "Define case types, access deleted cases"
-msgstr ""
+msgstr "Define case types, access deleted cases"
 
 #: CRM/Case/Info.php
 msgid "View and edit only those cases managed by this user"
-msgstr ""
+msgstr "View and edit only those cases managed by this user"
 
 #: CRM/Case/Info.php
 msgid "View and edit all cases (for visible contacts)"
-msgstr ""
+msgstr "View and edit all cases (for visible contacts)"
 
 #: CRM/Case/Info.php
 msgid "Open a new case"
-msgstr ""
+msgstr "Open a new case"
 
 #: CRM/Case/Task.php
 msgid "Export cases"
-msgstr ""
+msgstr "Export cases"
 
 #: CRM/Case/Task.php
 msgid "Restore cases"
-msgstr ""
+msgstr "Restore cases"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator is"
-msgstr ""
+msgstr "Homeless Services Coordinator is"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator"
-msgstr ""
+msgstr "Homeless Services Coordinator"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Health Services Coordinator is"
-msgstr ""
+msgstr "Health Services Coordinator is"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Health Services Coordinator"
-msgstr ""
+msgstr "Health Services Coordinator"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Senior Services Coordinator is"
-msgstr ""
+msgstr "Senior Services Coordinator is"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Senior Services Coordinator"
-msgstr ""
+msgstr "Senior Services Coordinator"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Benefits Specialist is"
-msgstr ""
+msgstr "Benefits Specialist is"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Benefits Specialist"
-msgstr ""
+msgstr "Benefits Specialist"
 
 #: ang/crmCaseType/list.html
 msgid "Case Types"
-msgstr ""
+msgstr "Case Types"
 
 #: templates/CRM/Case/Form/ActivityTab.tpl
 msgid "Reporter"
-msgstr ""
+msgstr "Reporter"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Export Document"
-msgstr ""
+msgstr "Export Document"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Are you sure you want to end this relationship?"
-msgstr ""
+msgstr "Are you sure you want to end this relationship?"
