--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 09:03+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-21 14:35+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -928,7 +928,7 @@ msgid ""
 "before you can use Batch Update via Profile. Navigate to Administer CiviCRM "
 ">> CiviCRM Profile to configure a Profile. Consult the online Administrator "
 "documentation for more information."
-msgstr ""
+msgstr "U moet een profiel aanmaken met daarin de %1 velden die u wilt bewerken voordat u de batch update via profiel kunt gebruiken. Navigeer naar Beheer > Aanpassen Gegevens en Schermen > CiviCRM Profiel om een profiel te configureren. Lees de online beheerders documentatie voor meer informatie."
 
 #: CRM/Member/Form/Task/Print.php
 msgid "Print Members"
@@ -2256,7 +2256,7 @@ msgstr "Er zijn geen lidmaatschappen voor u vastgelegd."
 
 #: xml/templates/message_templates/membership_autorenew_billing_subject.tpl
 msgid "Membership Autorenewal Billing Updates"
-msgstr ""
+msgstr "Lidmaatschap automatisch verlengen betalingswijzigingen"
 
 #: xml/templates/message_templates/membership_autorenew_cancelled_html.tpl
 #: xml/templates/message_templates/membership_autorenew_cancelled_text.tpl
@@ -2296,86 +2296,86 @@ msgstr "Dit lidmaatschap wordt automatisch verlengd. U kunt het automatisch verl
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden"
-msgstr ""
+msgstr "Lidmaatschapsstatus is genegeerd"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is NOT Overriden"
-msgstr ""
+msgstr "Lidmaatschapsstatus is niet genegeerd"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden?"
-msgstr ""
+msgstr "Lidmaatschapsstatus negeren?"
 
 #: CRM/Member/DAO/Membership.php
 msgid "Membership Recurring Contribution"
-msgstr ""
+msgstr "Lidmaatschap periodieke bijdrage"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log ID"
-msgstr ""
+msgstr "Lidmaatschap log-id"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log Start Date"
-msgstr ""
+msgstr "Lidmaatschap log-begindatum"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log End Date"
-msgstr ""
+msgstr "Lidmaatschap log-einddatum"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log modified By"
-msgstr ""
+msgstr "Lidmaatschap log gewijzigd door"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Maximum Related Memberships"
-msgstr ""
+msgstr "Maximum aantal gerelateerde lidmaatschappen"
 
 #: CRM/Member/Form/Membership.php
 msgid "Record Membership Payment is required when you use a price set."
-msgstr ""
+msgstr "Vastleggen lidmaatschapsbetaling is verplicht bij het gebruik van een prijsset."
 
 #: CRM/Member/Form/Membership.php
 msgid ""
 "Contribution submitted by a staff person using member's credit card for "
 "signup"
-msgstr ""
+msgstr "Bijdrage voor aanmelding gedaan door een staflid met gebruik van een creditcard van een lid"
 
 #: CRM/Member/Form/Membership.php
 msgid ""
 "The financial types associated with the old and new membership types are "
 "different. You may want to edit the contribution associated with this "
 "membership to adjust its financial type."
-msgstr ""
+msgstr "De financiele types behorend bij het oude en het nieuwe lidmaatschapstype verschillen. U wilt mogelijk het financieel type van de bijdrage wijzigen van dit lidmaatschap."
 
 #: CRM/Member/Form/Membership.php
 msgid ""
 "The cost of the old and new membership types are different. You may want to "
 "edit the contribution associated with this membership to adjust its amount."
-msgstr ""
+msgstr "De kosten bij het oude en het nieuwe lidmaatschapstype verschillen. U wilt mogelijk het bedrag van de bijdrage wijzigen van dit lidmaatschap."
 
 #: CRM/Member/Form/MembershipRenewal.php
 msgid ""
 "Contribution submitted by a staff person using member's credit card for "
 "renewal"
-msgstr ""
+msgstr "Bijdrage voor verlenging gedaan door een staflid met gebruik van een creditcard van een lid"
 
 #: CRM/Member/Form/Task/Batch.php CRM/Member/Form/Task/PickProfile.php
 #: CRM/Member/Task.php
 msgid "Update multiple memberships"
-msgstr ""
+msgstr "Wijzig meerdere lidmaatschappen"
 
 #: CRM/Member/Form/Task/Batch.php
 msgid ""
 "File or Autocomplete-Select type field(s) in the selected profile are not "
 "supported for Update multiple memberships."
-msgstr ""
+msgstr "De veldtypes bestand en automatisch-aanvullen-selecteren in het geselecteerde profiel worden niet ondersteund bij het wijzigen van meerdere lidmaatschappen. "
 
 #: CRM/Member/Form/Task/PickProfile.php
 msgid ""
 "The maximum number of members you can select for Update multiple memberships"
 " is %1. You have selected %2. Please select fewer members from your search "
 "results and try again."
-msgstr ""
+msgstr "Het maximale aantal leden waarvan u meerdere lidmaatschappen in een keer kunt wijzigen is %1. U heeft er %2 geselecteerd. Probeer het opnieuw met wat minder leden."
 
 #: CRM/Member/Form/Task/PickProfile.php
 msgid ""
@@ -2383,7 +2383,7 @@ msgid ""
 "before you can use Update multiple memberships. Navigate to Administer "
 "CiviCRM >> CiviCRM Profile to configure a Profile. Consult the online "
 "Administrator documentation for more information."
-msgstr ""
+msgstr "U moet een profiel aanmaken met daarin de %1 velden die u wilt bewerken voordat u de batch update van lidmaatschappen kunt gebruiken. Navigeer naar Beheer > Aanpassen Gegevens en Schermen > CiviCRM Profiel om een profiel te configureren. Lees de online beheerders documentatie voor meer informatie."
 
 #: CRM/Member/Task.php
 msgid "Export members"
@@ -2397,24 +2397,24 @@ msgstr "PDF-brieven voor lidmaatschappen afdrukken"
 msgid ""
 "For auto-renewing memberships the emails are sent when each payment is "
 "received"
-msgstr ""
+msgstr "Bij het automatisch verlengen van lidmaatschap wordt de e-mail verzonden nadat de betaling ontvangen is"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Membership Status Is Override?"
-msgstr ""
+msgstr "Lidmaatschapsstatus negeren?"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Yes\" to display only membership with Status Override set "
 "(membership is manually forced to a specific status)"
-msgstr ""
+msgstr "Selecteer \"Ja\" om alleen de lidmaatschappen te tonen waarvan de status genegeerd wordt (de lidmaatschapstatus is dan handmatig gezet)."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"No\" to display only memberships without Status Override set "
 "(membership is subject to the normal status rules)"
-msgstr ""
+msgstr "Selecteer \"Nee\" om alleen de lidmaatschappen te tonen waar de lidmaatschapsstatus via de normale regels bepaald zijn."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Select neither to show all memberships"
-msgstr ""
+msgstr "Kies niets om alle lidmaatschappen te tonen"
