po: update po/nl_NL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 12:02+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-21 16:25+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -634,11 +634,11 @@ msgstr "Uitgeschreven groep"
 
 #: CRM/Mailing/Form/Group.php
 msgid "INCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "INCLUSIEF Ontvangers van deze mailing(s)"
 
 #: CRM/Mailing/Form/Group.php
 msgid "EXCLUDE Recipients of These Mailing(s)"
-msgstr ""
+msgstr "EXCLUSIEF Ontvangers van deze mailing(s)"
 
 #: CRM/Mailing/Form/Group.php CRM/Mailing/Form/Settings.php
 #: CRM/Mailing/Form/Test.php CRM/Mailing/Form/Upload.php
@@ -1173,11 +1173,11 @@ msgstr "E-mailadres"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
-msgstr ""
+msgstr "Afmelden groep"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "No content to preview"
-msgstr ""
+msgstr "Er is geen niets om te tonen"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
@@ -1221,7 +1221,7 @@ msgstr "Er zal een testbericht verzonden worden naar %1 personen:"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "None of the contacts in this group have an email address."
-msgstr ""
+msgstr "Geen van de contacten in deze groep heeft een e-mailadres."
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Group is empty."
@@ -1233,7 +1233,7 @@ msgstr "Lijst met ontvangers tonen"
 
 #: ang/crmMailing/BlockRecipients.html
 msgid "Edit Recipient Options"
-msgstr ""
+msgstr "Wijzig ontvangstopties"
 
 #: ang/crmMailing/BlockResponses.html ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/EditCtrl/report.html
@@ -1311,11 +1311,11 @@ msgstr "Selecteer campagne"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
-msgstr ""
+msgstr "Volg doorklikken"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Opens"
-msgstr ""
+msgstr "Volg openen"
 
 #: ang/crmMailing/BodyHtml.html ang/crmMailing/BodyText.html
 msgid "Required tokens are missing."
@@ -1390,7 +1390,7 @@ msgstr "Concept opslaan"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "Submit and Approve Mailing"
-msgstr ""
+msgstr "Opslaan en goedkeuren mailing"
 
 #: ang/crmMailing/EditMailingCtrl.js ang/crmMailingAB/EditCtrl.js
 #: ang/crmMailingAB/WinnerDialogCtrl.js
@@ -1437,19 +1437,19 @@ msgstr "Conflict"
 msgid ""
 "The \"%1\" option conflicts with the \"%2\" option. The \"%2\" option has "
 "been disabled."
-msgstr ""
+msgstr "De \"%1\" en de \"%2\" opties zijn niet tegelijk mogelijk. De \"%2\" optie is uitgeschakeld."
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
 "The mailing must include the street address of the organization. Please "
 "insert the %1 token."
-msgstr ""
+msgstr "De mailing moet het adres van de organisatie bevatten. Voeg a.u.b. het %1 token toe."
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
 "The mailing must allow recipients to (a) unsubscribe from the mailing-list or (b) completely opt-out from all\n"
 "  mailings. Please insert an unsubscribe or opt-out token."
-msgstr ""
+msgstr "De mailing moet de ontvanger een mogelijkheid bieden om zich af te melden voor de mailinglijst of om zich uit te schrijven voor alle mailings. Voeg a.u.b. een token voor afmelden of uitschrijven toe."
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid "Via Web"
@@ -1463,7 +1463,7 @@ msgstr "Via e-mail"
 msgid ""
 "Alternatively, you may select a header or footer which includes the required"
 " tokens."
-msgstr ""
+msgstr "Een alternatieve mogelijkheid is om een koptekst of voettekst (header/footer) te selecteren die de verplichte tokens bevat."
 
 #: ang/crmMailing/EmailBodyCtrl.js
 msgid "Required tokens"
@@ -1481,21 +1481,21 @@ msgstr "Ongeldige component-ID (%1)"
 msgid ""
 "Based on current data, approximately %1 contacts will receive a copy of the "
 "mailing."
-msgstr ""
+msgstr "Volgens een schatting met de huidige gegevens zijn er %1 contacten die de mailing zullen ontvangen."
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid "Below is a sample of the first %1 recipients."
-msgstr ""
+msgstr "Hieronder staat een voorbeeld met de eerste %1 ontvangers."
 
 #: ang/crmMailing/PreviewRecipCtrl.html
 msgid ""
 "If individual contacts are separately modified, added, or removed, then the "
 "final list may change."
-msgstr ""
+msgstr "Indien er nog contacten worden gewijzigd, toegevoegd of verwijderd kan de uiteindelijke lijst nog aangepast worden. "
 
 #: ang/crmMailing/RadioDate.js
 msgid "The scheduled date and time is in the past"
-msgstr ""
+msgstr "Het geplande tijdstip ligt in het verleden"
 
 #: ang/crmMailing/Recipients.html
 msgid "Mandatory Group"
@@ -1503,29 +1503,29 @@ msgstr "Verplichte groep"
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Group"
-msgstr ""
+msgstr "Inclusief groep"
 
 #: ang/crmMailing/Recipients.html
 msgid "Exclude Group"
-msgstr ""
+msgstr "Exclusief groep"
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Past Recipients From"
-msgstr ""
+msgstr "Inclusief vorige ontvangers"
 
 #: ang/crmMailing/Recipients.html
 msgid "Exclude Past Recipients From"
-msgstr ""
+msgstr "Exclusief vorige ontvangers"
 
 #: ang/crmMailing/Recipients.js
 msgid ""
 "This mailing was generated based on search results. The search results "
 "cannot be removed."
-msgstr ""
+msgstr "Deze mailing is aangemaakt met zoekresultaten. De zoekresultaten kunnen niet verwijderd worden."
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save the current mailing as a template."
-msgstr ""
+msgstr "Bewaar de huidige mailing als een sjabloon."
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Update \"%1\""
@@ -1541,7 +1541,7 @@ msgstr "Onderwerp: %1"
 
 #: ang/crmMailing/services.js
 msgid "Could not identify any recipients. Perhaps the group is empty?"
-msgstr ""
+msgstr "Er zijn geen ontvangers, misschien is de groep leeg?"
 
 #: ang/crmMailing/services.js
 msgid "Sending..."
@@ -1596,7 +1596,7 @@ msgid ""
 "A/B testing allows you to send two test mailings to a random subset of your "
 "recipients. After collecting and comparing metrics, the more successful "
 "mailing will be sent to the remaining recipients."
-msgstr ""
+msgstr "Met A/B-testen kunt u twee testmailings versturen naar een aantal ontvangers. Na het beoordelen van de resultaten kunt u de mailing die het beste werkt gebruiken om te versturen naar de overige ontvangers."
 
 #: ang/crmMailingAB/BlockSetup.html ang/crmMailingAB/ListCtrl.html
 msgid "Test Type"
@@ -1703,11 +1703,11 @@ msgstr "Zoek naar contacten met '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Browse events of type '%1'"
-msgstr ""
+msgstr "Toon gebeurtenissen van type '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "n/a"
-msgstr ""
+msgstr "n.v.t."
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for  '%1'"
@@ -1715,11 +1715,11 @@ msgstr "Rapporten voor '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens (WIP)"
-msgstr ""
+msgstr "Openen (WIP)"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Total Clicks (WIP)"
-msgstr ""
+msgstr "Aantal kliks (WIP)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test A (%1)"
@@ -2539,15 +2539,15 @@ msgstr "Omschrijving bouncetype"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Spool ID"
-msgstr ""
+msgstr "Spool-id"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Mailing Job"
-msgstr ""
+msgstr "Mailing job"
 
 #: CRM/Mailing/DAO/TrackableURL.php
 msgid "Trackable URL ID"
-msgstr ""
+msgstr "Te volgen URL-id"
 
 #: CRM/Mailing/Event/DAO/Bounce.php
 msgid "Bounce ID"
@@ -2557,58 +2557,58 @@ msgstr "Bounce-ID"
 #: CRM/Mailing/Event/DAO/Opened.php CRM/Mailing/Event/DAO/Reply.php
 #: CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Event Queue"
-msgstr ""
+msgstr "Gebeurtenissen wachtrij"
 
 #: CRM/Mailing/Event/DAO/Delivered.php
 msgid "Delivered ID"
-msgstr ""
+msgstr "Delivered-id"
 
 #: CRM/Mailing/Event/DAO/Forward.php
 msgid "Forward ID"
-msgstr ""
+msgstr "Forward-id"
 
 #: CRM/Mailing/Event/DAO/Forward.php
 msgid "Destination Queue"
-msgstr ""
+msgstr "Bestemming wachtrij"
 
 #: CRM/Mailing/Event/DAO/Opened.php
 msgid "Mailing Opened ID"
-msgstr ""
+msgstr "Mailing-geopend-id"
 
 #: CRM/Mailing/Event/DAO/Reply.php
 msgid "Reply ID"
-msgstr ""
+msgstr "Reply-id"
 
 #: CRM/Mailing/Event/DAO/Reply.php
 msgid "Reply Timestamp"
-msgstr ""
+msgstr "Reply tijdstempel"
 
 #: CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Trackable URL Open ID"
-msgstr ""
+msgstr "Te volgen URL-open-id"
 
 #: CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Trackable Url"
-msgstr ""
+msgstr "Te volgen URL"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Total Tracked Opens"
-msgstr ""
+msgstr "Aantal gevolgde openen"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click-Throughs"
-msgstr ""
+msgstr "Doorklikken"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click-Throughs"
-msgstr ""
+msgstr "Volg doorklikken"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
 "The mailing must allow recipients to (a) unsubscribe from the mailing-list "
 "or (b) completely opt-out from all mailings. Please insert an unsubscribe or"
 " opt-out token."
-msgstr ""
+msgstr "De mailing moet de ontvanger een mogelijkheid bieden om zich af te melden voor de mailinglijst of om zich uit te schrijven voor alle mailings. Voeg a.u.b. een token voor afmelden of uitschrijven toe."
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Reports for '%1'"
@@ -2619,4 +2619,4 @@ msgid ""
 "NOTE: When this feature is enabled, all links in the message body (including"
 " mailtos) will be automatically re-written to route through your CiviCRM "
 "website prior to redirecting to the target page."
-msgstr ""
+msgstr "NB: Wanneer deze functie is ingeschakeld worden alle links in het tekstgedeelte (inclusief mailen) automatisch gewijzigd zodat ze naar uw CiviCRM-website verwijzen voordat ze naar de normale plaats worden doorgestuurd."
