po: update po/nl_NL/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 12:02+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-21 15:00+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,7 +26,7 @@ msgstr ""
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance ID"
-msgstr "Rapport Exemplaar ID"
+msgstr "Rapport exemplaar-id"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Domain ID"
@@ -38,7 +38,7 @@ msgstr "Rapport Exemplaar Titel"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report template ID"
-msgstr "Rapportsjabloon-ID"
+msgstr "Rapportsjabloon-id"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report instance Name"
@@ -453,7 +453,7 @@ msgstr "Rel ID"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Relationship Dates Validity"
-msgstr ""
+msgstr "Relatieschapsdatum geldigheid"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Not expired"
@@ -2060,7 +2060,7 @@ msgstr "Er zijn geen rapportsjablonen."
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Name"
-msgstr ""
+msgstr "Afzender naam"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Name"
@@ -2068,45 +2068,45 @@ msgstr "Toegewezen aan"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Name"
-msgstr ""
+msgstr "Bestemming naam"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Email"
-msgstr ""
+msgstr "Afzender e-mailadres"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Email"
-msgstr ""
+msgstr "Contactpersoon e-mailadres"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Email"
-msgstr ""
+msgstr "Bestemming e-mailadres"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Phone"
-msgstr ""
+msgstr "Afzender telefoon"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Phone"
-msgstr ""
+msgstr "Contactpersoon telefoon"
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Phone"
-msgstr ""
+msgstr "Bestemming telefoon"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Activities"
-msgstr ""
+msgstr "Totaal activiteiten"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid ""
 "You cannot use \"Add Contacts to Group\" action unless contacts fields are "
 "selected."
-msgstr ""
+msgstr "U kunt geen contacten aan een groep toevoegen als er geen contactvelden zijn geselecteerd."
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Types"
-msgstr ""
+msgstr "Totaal types"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "Total Number of Activities"
@@ -2118,11 +2118,11 @@ msgstr "Totale duur (in minuten)"
 
 #: CRM/Report/Form/ActivitySummary.php
 msgid "List all activity(s) for this row."
-msgstr ""
+msgstr "Toon alle activiteiten behorend bij deze regel."
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Extra information to control grouping"
-msgstr ""
+msgstr "Extra informatie voor groepering"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Contact Merge"
@@ -2130,7 +2130,7 @@ msgstr "Contacten samenvoegen"
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Net"
-msgstr ""
+msgstr "Netto"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Email on hold"
@@ -2138,47 +2138,47 @@ msgstr "E-mailadres uitgeschakeld"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Last Year Total"
-msgstr ""
+msgstr "Totaal vorig jaar"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Lifetime Total"
-msgstr ""
+msgstr "Totaal levensduur"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Lifetime total"
-msgstr ""
+msgstr "Totaal levensduur"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total amount last year"
-msgstr ""
+msgstr "Totaalbedrag vorig jaar"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total for "
-msgstr ""
+msgstr "Totaal voor "
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total for Fiscal Year "
-msgstr ""
+msgstr "Totaal voor fiscaal jaar"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total LifeTime"
-msgstr ""
+msgstr "Totaal levensduur"
 
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Last Contribution Processed"
-msgstr ""
+msgstr "Laatste verwerkte bijdrage"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Registered by Participant ID"
-msgstr ""
+msgstr "Geregistreerd door deelnemer-id"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Participant Fee"
-msgstr ""
+msgstr "Deelnemerskosten"
 
 #: CRM/Report/Form/Instance.php
 msgid "Configure link to..."
-msgstr ""
+msgstr "Configureer link naar..."
 
 #: CRM/Report/Form/Instance.php templates/CRM/Report/Page/InstanceList.tpl
 msgid "View Results"
@@ -2210,15 +2210,15 @@ msgstr "Opt-outs"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Total Open Rate"
-msgstr ""
+msgstr "Totaal open tarief"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Open Rate"
-msgstr ""
+msgstr "Uniek open tarief"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "View Mailing details for this mailing"
-msgstr ""
+msgstr "Bekijk mailinggegevens van deze mailing"
 
 #: CRM/Report/Form.php
 msgid "Developer"
@@ -2226,7 +2226,7 @@ msgstr "Voor ontwikkelaars"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
-msgstr ""
+msgstr "Algemeen totaal"
 
 #: CRM/Report/Form.php
 msgid "Refresh results"
