--- a/po/pl_PL/admin.po
+++ b/po/pl_PL/admin.po
@@ -8,6 +8,7 @@
 # njakub <fiilozof@gmail.com>, 2014
 # Karolina Pomarańska <karolina@caltha.pl>, 2015
 # kalor <karol.krzyczkowski@gmail.com>, 2014-2015
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Mateusz Sikora <magu.bba@gmail.com>, 2015
 # Michael Smitch <thenurrr23@gmail.com>, 2016
 # Michał Mach <michau@gmail.com>, 2014
@@ -18,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-22 23:17+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -69,7 +70,7 @@ msgstr "Zainstaluj"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Zainstalować \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install"
@@ -77,7 +78,7 @@ msgstr "Pobierz i zainstaluj"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "Pobrać i zainstalować \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
@@ -85,11 +86,11 @@ msgstr "Odinstaluj"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "Odinstalować \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "Włączyć \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
@@ -253,7 +254,7 @@ msgstr "Typ lokalizacji '%1' został zapisany."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Account"
-msgstr ""
+msgstr "Konto E-mail"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email Domain"
@@ -278,7 +279,7 @@ msgstr "Ścieżka zwrotna musi być posiadać format prawidłowego adresu e-mail
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Serwer"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -795,7 +796,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "show all"
-msgstr ""
+msgstr "pokaż wszystkie"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "CiviMail Component Settings"
