--- a/po/pl_PL/member.po
+++ b/po/pl_PL/member.po
@@ -8,6 +8,7 @@
 # njakub <fiilozof@gmail.com>, 2014
 # Karolina Pomarańska <karolina@caltha.pl>, 2015
 # Marcin Cytawa <marcin.cytawa@gmail.com>, 2012
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Radek <d.exax@hotmail.com>, 2013
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-22 18:06+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,14 +61,14 @@ msgstr "Pola członkowskie"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Invalid date \"%1\" (must have form yyyy-mm-dd)."
-msgstr ""
+msgstr "Niewłaściwa data \"%1\" (musi mieć format rrrr-mm-dd)."
 
 #: CRM/Member/BAO/Membership.php
 msgid ""
 "Oops, it looks like there is no valid membership status corresponding to the"
 " membership start and end dates for this membership. Contact the site "
 "administrator for assistance."
-msgstr "Oppps ,wygląda na to ,że status członkostwa odpowiadający dacie rozpoczęcia i zakończenia tego członkostwa jest nieprawidłowy. Skontaktuj się z administratorem strony w celu uzyskania pomocy ."
+msgstr "Ups, wygląda na to, że status członkostwa odpowiadający dacie rozpoczęcia i zakończenia jest nieprawidłowy. Skontaktuj się z administratorem w celu uzyskania pomocy."
 
 #: CRM/Member/BAO/Membership.php
 msgid "Could not find a system table"
@@ -85,7 +86,7 @@ msgstr ""
 
 #: CRM/Member/BAO/Membership.php
 msgid "Processed %1 membership records. Updated %2 records."
-msgstr ""
+msgstr "Przetworzono %1 rekordów członków. Zaktualizowano %2 rekordy."
 
 #: CRM/Member/BAO/MembershipStatus.php
 msgid ""
@@ -127,11 +128,11 @@ msgstr ""
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew"
-msgstr ""
+msgstr "Członkostwo jest odnawiane automatycznie"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is NOT Auto-Renew"
-msgstr ""
+msgstr "Członkostwo NIE przedłuża się automatycznie."
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Pay Later"
