po: update po/nl_NL/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 11:51+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-05-23 18:52+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -989,7 +989,7 @@ msgstr "E-mail versturen"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
-msgstr ""
+msgstr "Automatisch e-mailen vastleggen "
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
@@ -1013,11 +1013,11 @@ msgstr "na"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
-msgstr ""
+msgstr "Actie conditie"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
-msgstr ""
+msgstr "Herhaal conditie"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "From Email"
@@ -1045,7 +1045,7 @@ msgstr "Rollen van ontvangers"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Manual Recipients"
-msgstr ""
+msgstr "Handmatige ontvangers"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select appropriate value"
@@ -1053,7 +1053,7 @@ msgstr "Voer a.u.b. een geldige waarde in"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Subject is a required field."
-msgstr ""
+msgstr "Onderwerp is een verplicht veld."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select entity value"
@@ -1061,7 +1061,7 @@ msgstr "Kies a.u.b. een entiteitswaarde"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Absolute date cannot be earlier than the current time."
-msgstr ""
+msgstr "De datum kan niet voor vandaag liggen."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid ""
@@ -1071,11 +1071,11 @@ msgstr "Als \"Ook toevoegen\" of \"Beperk tot\" is geselecteerd, dan moet er ook
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Selected Reminder has been deleted."
-msgstr ""
+msgstr "De geselecteerde herinnering is verwijderd."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your new Reminder titled %1 has been saved."
-msgstr ""
+msgstr "De nieuwe herinnering %1 is opgeslagen."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your Reminder titled %1 has been updated."
@@ -2185,25 +2185,25 @@ msgstr "Overzicht toegangsrechten"
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Details"
-msgstr ""
+msgstr "Rechten: details"
 
 #: ang/crmCxn/AdvTable.html
 msgid "Property"
-msgstr ""
+msgstr "Eigenschap"
 
 #: ang/crmCxn/ConfirmConnectCtrl.html
 msgid "The application, \\\"%1\\\", requests permission to access your system."
-msgstr ""
+msgstr "De applicatie, \\\"%1\\\", wil toegang tot uw systeem."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Are you sure you want to reconnect \\\"%1\\\"?"
-msgstr ""
+msgstr "Weet u zeker dat u opnieuw wilt met \\\"%1\\\"  verbinden?"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid ""
 "Reconnecting will change the connection details (such as callback URLs and "
 "permissions). This can be useful in a few cases, such as:"
-msgstr ""
+msgstr "Opnieuw verbinden zal de details van de verbinding (zoals callback URL's en rechten) wijzigen. Dit is handig als:"
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After your site has migrated to a new URL."
@@ -2215,17 +2215,17 @@ msgstr "Nadat de applicatie is gemigreerd naar een nieuwe URL."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has changed permission requirements."
-msgstr ""
+msgstr "Nadat de applicatie de vereiste rechten heeft gewijzigd."
 
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "After the application has a major failure or reset."
-msgstr ""
+msgstr "Na een grote fout in de applicatie of een reset."
 
 #: ang/crmCxn/Connectivity.html
 msgid ""
 "There was a problem verifying that this site is available on the public "
 "Internet."
-msgstr ""
+msgstr "Het bepalen of deze website openbaar beschikbaar is, is mislukt."
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
@@ -2233,7 +2233,7 @@ msgstr "Zie ook:"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
-msgstr ""
+msgstr "Firewalls en proxies"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
@@ -2251,11 +2251,11 @@ msgstr "Info over %1"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Settings (External)"
-msgstr ""
+msgstr "%1: instellingen (extern)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Logs (External)"
-msgstr ""
+msgstr "%1: logs (extern)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Logs"
@@ -2263,7 +2263,7 @@ msgstr "Logs"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Documentation (External)"
-msgstr ""
+msgstr "%1: documentatie (extern)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Docs"
@@ -2271,7 +2271,7 @@ msgstr "Documentatie"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Support (External)"
-msgstr ""
+msgstr "%1: ondersteuning (extern)"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Support"
@@ -2355,7 +2355,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Cannot open link. Unrecognized mode."
-msgstr ""
+msgstr "Link kan niet worden geopend. Mode niet herkend."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Opening..."
@@ -3221,7 +3221,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Enable repetition."
-msgstr ""
+msgstr "Herhalen inschakelen."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "You can manually send out the reminders to these recipients."
@@ -6444,7 +6444,7 @@ msgstr "Menu-item"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Unrestricted"
-msgstr ""
+msgstr "Onbeperkt"
 
 #: CRM/Admin/Form/Navigation.php
 msgid "After menu element"
@@ -6512,7 +6512,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting.php
 msgid "Save Failed"
-msgstr ""
+msgstr "Opslaan mislukt"
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid ""
@@ -6521,7 +6521,7 @@ msgstr ""
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
-msgstr ""
+msgstr "CKEditor opgeslagen"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
@@ -6610,11 +6610,11 @@ msgstr "Andere WYSIWYG-editors kunnen gedownload worden via het <a %1>CiviCRM-ex
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
-msgstr ""
+msgstr "Kalender"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Special symbols include:"
-msgstr ""
+msgstr "Speciale symbolen waaronder:"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "currency symbol (e.g. '$')"
@@ -6631,7 +6631,7 @@ msgstr "geldbedrag, opgemaakt volgens de ingestelde lokalisatie-opties"
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid ""
 "For a full list of options see the php <a %1>money_format documentation</a>."
-msgstr ""
+msgstr "Een lijst met alle mogelijke opties staat in de PHP <a %1>money_format documentatie</a>."
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Format for displaying monetary amounts with currency symbol."
@@ -6645,7 +6645,7 @@ msgstr "Opmaak voor het tonen van geldbedragen zonder valutasymbool."
 msgid ""
 "You may override the ts() function in CiviCRM by defining your own "
 "translation function."
-msgstr ""
+msgstr "U kunt besluiten om de standaard vertaalfunctie ts() niet te gebruiken door een eigen functie te definiëren."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Configure CiviCRM for your country and language."
@@ -6680,7 +6680,7 @@ msgid ""
 "These variables are computed automatically using "
 "<tt>civicrm.settings.php</tt> and its options, such as "
 "<tt>CIVICRM_TEMPLATE_COMPILEDIR</tt>."
-msgstr ""
+msgstr "Deze variabelen worden automatisch bepaald in <tt>civicrm.settings.php</tt> door de opties, zoals  <tt>CIVICRM_TEMPLATE_COMPILEDIR</tt>."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
@@ -6729,13 +6729,13 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Url.hlp
 msgid "URL Variables"
-msgstr ""
+msgstr "URL-variabelen"
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid ""
 "These settings define the URLs used to access CiviCRM resources (CSS files, "
 "Javascript files, images, etc.)."
-msgstr ""
+msgstr "Deze instellingen definiëren de URL's die gebruikt worden om de bestanden van CiviCRM te benaderen (CSS, JavaScript, afbeeldingen, ...)."
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid "You may configure these settings using absolute URLs or URL variables."
