po: update po/hu_HU/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/contribute.po
+++ b/po/hu_HU/contribute.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-18 09:26+0000\n"
+"PO-Revision-Date: 2016-05-23 16:02+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -5344,17 +5344,17 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "REMAINING CREDIT"
-msgstr ""
+msgstr "FENNMARADÓ HITEL"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "CREDIT ADVICE"
-msgstr ""
+msgstr "JÓVÁÍRÁSI ÉRTESÍTÉS"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid ""
 "Please do not pay on this advice. Deduct the amount of this Credit Note from"
 " your next payment to us"
-msgstr ""
+msgstr "Kérem ne fizessen erre az értesítésre. Vonja le ezen jóváírószámla összegét a következő átutalásából"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Customer:"
@@ -5362,8 +5362,8 @@ msgstr "Vevő:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Credit Note#:"
-msgstr ""
+msgstr "Jóváírószámla #:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Credit Amount:"
-msgstr ""
+msgstr "Jóváírt összeg:"
