--- a/po/es_ES/countries.po
+++ b/po/es_ES/countries.po
@@ -5,6 +5,7 @@
 # Translators:
 # ixiam <info@ixiam.com>, 2013
 # Carlos Capote <carloscapote@masticable.org>, 2013
+# ixiam <info@ixiam.com>, 2016
 # iWi development <iwidevelopment@gmail.com>, 2012
 # ixiam <info@ixiam.com>, 2013
 # kaotik <kaotiko@gmail.com>, 2011
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-23 16:35+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -246,11 +247,11 @@ msgstr "Comores"
 
 msgctxt "country"
 msgid "Congo, The Democratic Republic of the"
-msgstr "Congo, Repúbica Democrática del"
+msgstr "República Democrática del Congo"
 
 msgctxt "country"
 msgid "Congo, Republic of the"
-msgstr "República Democrática del Congo"
+msgstr "República del Congo"
 
 msgctxt "country"
 msgid "Cook Islands"
@@ -262,7 +263,7 @@ msgstr "Costa Rica"
 
 msgctxt "country"
 msgid "Côte d'Ivoire"
-msgstr "Costa de Marfíl"
+msgstr "Costa de Marfil"
 
 msgctxt "country"
 msgid "Croatia"
