--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 19:55+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-23 09:18+0000\n"
+"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1333,7 +1333,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/wizard.html
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 msgid "This mailing has been submitted."
-msgstr ""
+msgstr "Ce publipostage a été soumis."
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
