po: update po/hu_HU/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/admin.po
+++ b/po/hu_HU/admin.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-18 16:18+0000\n"
+"PO-Revision-Date: 2016-05-23 20:06+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -258,7 +258,7 @@ msgstr "Email dominhez érvényes domain formátumot használj (pl. 'minta.hu')!
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Localpart"
-msgstr ""
+msgstr "Helyirész"
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Return-Path"
@@ -2378,7 +2378,7 @@ msgstr "Mező(k)"
 msgid ""
 "For in-depth details about entities and actions, see the <a href='%1' "
 "target='%2'>API Explorer</a>."
-msgstr ""
+msgstr "Az egyedek és a műveletek további részletei után, forduljon  <a href='%1' target='%2'>API Explorer</a>-hez."
 
 #: templates/CRM/Admin/Form/CMSUser.tpl
 msgid "Synchronize %1 Users"
@@ -3214,7 +3214,7 @@ msgstr "A Kapcsolat B-ből a Kapcsolat A-ba mutató viszony címkéje. PÉLDA: K
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid ""
 "WARNING: You are about to delete the Reminder titled <strong>%1</strong>."
-msgstr ""
+msgstr "FIGYELMEZTETÉS: Törölni készül a <strong>%1</strong> emlékeztetőt."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Enable repetition."
@@ -6433,7 +6433,7 @@ msgid ""
 "              The result will land on the same day of the month except for days 29-31 when the target month contains fewer days than the previous month.\n"
 "              For example, if a job is scheduled to run on August 31st, the following invocation will occur on October 1st, and then the 1st of every month thereafter.\n"
 "              To avoid this issue, please schedule Monthly and Quarterly jobs to run within the first 28 days of the month."
-msgstr ""
+msgstr "A relatív hónap értékek számításához az áthidalt hónap(ok)on alapul. \nAz eredmény azon a napon fog megállni amelyikre esik kivéve a 29-31 napos hónapokat, amikor a a cél hónap kevesebb napot tartalmaz mint a megelőző hónap.\nPéldául, a a feladat augusztus 31-re ütemezett, a következő futása október 1-re esik, és utána minden hónap elsejére.\nHogy elkerülje a hasonló eseteket, kérjük a Havonta és Negyedévente gyakoriságra ütemezett feladatokat,   futtassa a hónap első 28 napján belül."
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Menu Item"
@@ -6461,7 +6461,7 @@ msgstr "Felső szintű"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Access Control by Financial Type"
-msgstr ""
+msgstr "Pénzügyi típus szerinti hozzáférés beállítás engedélyezése"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Configure CKEditor"
@@ -6572,14 +6572,14 @@ msgstr "Hagyja üresen a következő frekvencia szerinti futtatáshoz."
 
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid "Access Control by Financial Type"
-msgstr ""
+msgstr "Pénzügyi típus hozzáférés beállítása"
 
 #: templates/CRM/Admin/Form/Preferences/Contribute.hlp
 msgid ""
 "Enabling Access Control by Financial Types is only required if you need users in one role to access some financial transactions but not ones with certain financial types.</p>\n"
 "<p>For example, Planned Giving bequests may be highly confidential and not appropriate for staff organizing events to see, even though they need to be able to administer the payments for ticket purchases.</p>\n"
 "<p>After enabling, you will be able to set create, view, edit, and delete permissions separately for each financial type by navigating to Administer > Users and Permissions > Permissions (Access Control), and clicking on the Access Control link for your CMS."
-msgstr ""
+msgstr "A Pénzügyi típus szerinti hozzáférés beállítás engedélyezése csak akkor szükséges. ha olyan felhasználóra van szüksége egy szerepkörben néhány pénzügyi tranzakcióhoz hozzá kell férni, de nem egy bizonyos pénzügyi típusnál. </p>\n<p>Például, egy hagyaték  nagyon bizalmas lehet és nem lenne jó, ha egy rendezvényt szervező munkatárs látná azt, miközben neki látnia kell a rendezvény belépőjegyeket és a kapcsolódó befizetéseket. </p>\n<p>Az engedélyezése után, beállíthatja a létrehozás, megtekintés, szerkesztés és törlés jogosultságokat egyenként minden pénzügyi típusra, az Adminisztrálás >Felhasználók és jogosultságok > Jogosultságok (hozzáférés) menüpont alatt a tartalom kezelőrendszer hozzáférés engedélyezés linkjére kattintva."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
