--- a/po/de_DE/install.po
+++ b/po/de_DE/install.po
@@ -5,7 +5,7 @@
 # Translators:
 # Benny Doe <s71664@htw-dresden.de>, 2016
 # Ettore Atalan <atalanttore@googlemail.com>, 2015
-# Martin Peth <peth@systopia.de>, 2015
+# Martin Peth <peth@systopia.de>, 2015-2016
 # metalmatze <matthias.hahn@web.de>, 2014
 # heliogabal <rhalbmann@gmail.com>, 2014
 # Sebastian Huter <inactive+sebastian.huter@transifex.com>, 2015
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 16:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-24 08:35+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -418,7 +418,7 @@ msgid ""
 "improvements, target our communications and build the community. If you have"
 " a technical role for this site, be sure to check Keep in Touch to receive "
 "technical updates (a low volume mailing list)."
-msgstr "Haben Sie diese Seite auf CiviCRM.org registriert? Falls nicht, helfen Sie uns bitte, das CiviCRM Ökosystem zum stärken, indem Sie sich ein paar Minuten Zeit nehmen und unser <a %1>Registrierungsformular ausfüllen</a>. Die dadurch gesammelten Informationen helfen uns dabei, Verbesserungen nach Wichtigkeit zu ordnen, unsere Kommunikation zu verbessern und eine Community aufzubauen. Wenn Sie für den technischen Teil dieser Seite verantwortlich sind, dann werfen Sie unbedingt einen Blick auf Keep in Touch, um technische Updates zu erhalten (Mailing Liste mit geringem Umfang)"
+msgstr "Haben Sie diese Seite auf CiviCRM.org registriert? Falls nicht, helfen Sie uns bitte, das CiviCRM-Ökosystem zum stärken, indem Sie sich ein paar Minuten Zeit nehmen und unser <a %1>Registrierungsformular ausfüllen</a>. Die dadurch gesammelten Informationen helfen uns dabei, Verbesserungen zu priorisieren, unsere Kommunikation zu verbessern und die Community aufzubauen."
 
 #: install/index.php
 msgid ""
