--- a/po/ro_RO/campaign.po
+++ b/po/ro_RO/campaign.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Dragos Apostol <dragos18dragon@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-24 17:54+0000\n"
+"Last-Translator: Dragos Apostol <dragos18dragon@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/civicrm/civicrm/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,11 +19,11 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Campaign.php
 msgid "Current Campaigns"
-msgstr ""
+msgstr "Campanii in derulare"
 
 #: CRM/Campaign/BAO/Campaign.php
 msgid "Past Campaigns"
-msgstr ""
+msgstr "Campanii din trecut"
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
@@ -72,19 +73,19 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Survey.php
 msgid "View Survey Report"
-msgstr ""
+msgstr "Vezi raportul sondajului"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Description"
-msgstr ""
+msgstr "Descrierea campaniei"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Start Date"
-msgstr ""
+msgstr "Data pornirii campaniei"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign End Date"
-msgstr ""
+msgstr "Data sfârșirii campaniei"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign External ID"
@@ -96,19 +97,19 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Is Campaign Active?"
-msgstr ""
+msgstr "Este campania activa?"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Created By"
-msgstr ""
+msgstr "Campanie creata de"
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/DAO/Survey.php
 msgid "Campaign Created Date"
-msgstr ""
+msgstr "Data crearii campaniei"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified By"
-msgstr ""
+msgstr "Campanie modificata de"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified Date"
@@ -116,7 +117,7 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Campaign.php CRM/Campaign/Form/Campaign.php
 msgid "Campaign Goals"
-msgstr ""
+msgstr "Obiectivele Campaniei"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Goal Revenue"
@@ -124,7 +125,7 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Survey ID"
-msgstr ""
+msgstr "ID-ul Sondajului"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Campaign ID"
@@ -136,7 +137,7 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Instructions"
-msgstr ""
+msgstr "Instructiuni"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Hold Duration"
@@ -152,7 +153,7 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Is Active"
-msgstr ""
+msgstr "Sondajul este activ"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Is Default Survey"
@@ -160,15 +161,15 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Created By"
-msgstr ""
+msgstr "Sondaj creat de"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified"
-msgstr ""
+msgstr "Sondaj Modificat"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified On"
-msgstr ""
+msgstr "Sondaj modificat pe "
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "No Email Verification"
@@ -176,7 +177,7 @@ msgstr ""
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Edit Campaign"
-msgstr ""
+msgstr "Modifica Campania"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "- select Parent -"
@@ -202,7 +203,7 @@ msgstr ""
 #: CRM/Campaign/Form/Task/Interview.php CRM/Campaign/Form/Task/Release.php
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Survey(s)"
-msgstr ""
+msgstr "Sondaj(e)"
 
 #: CRM/Campaign/Form/Gotv.php
 msgid "GOTV (Voter Tracking)"
@@ -216,15 +217,15 @@ msgstr ""
 
 #: CRM/Campaign/Form/Gotv.php CRM/Campaign/Form/Task/Interview.php
 msgid "Could not find Survey."
-msgstr ""
+msgstr "Nu am putut găsi Sondajul"
 
 #: CRM/Campaign/Form/Petition/Signature.php
 msgid "Sign the Petition"
-msgstr ""
+msgstr "Semneaza Petitia"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Edit Survey"
-msgstr ""
+msgstr "Modifica Sondajul"
 
 #: CRM/Campaign/Form/Petition.php CRM/Campaign/Form/Survey/Delete.php
 #: CRM/Campaign/Page/DashBoard.php CRM/Campaign/Page/Survey.php
@@ -233,19 +234,19 @@ msgstr "Șterge Sondaj"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Edit Petition"
-msgstr ""
+msgstr "Modifica petitia"
 
 #: CRM/Campaign/Form/Petition.php CRM/Campaign/Page/DashBoard.php
 msgid "Delete Petition"
-msgstr ""
+msgstr "Sterge Petiția"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Petition Dashboard"
-msgstr ""
+msgstr "Panou Petiție"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Petition Title"
-msgstr ""
+msgstr "Titlul Petiției"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Contact Profile"
@@ -277,11 +278,11 @@ msgstr ""
 
 #: CRM/Campaign/Form/Petition.php
 msgid " Petition has been deleted."
-msgstr ""
+msgstr "Petiția a fost stearsa"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Petition has been saved."
-msgstr ""
+msgstr "Petiția a fost salvata"
 
 #: CRM/Campaign/Form/Petition.php
 msgid " You can add another Petition."
@@ -289,15 +290,15 @@ msgstr ""
 
 #: CRM/Campaign/Form/Search/Campaign.php
 msgid "Find Campaigns"
-msgstr ""
+msgstr "Gaseste campanii"
 
 #: CRM/Campaign/Form/Search/Petition.php
 msgid "Find Petition"
-msgstr ""
+msgstr "Găsește Petiție"
 
 #: CRM/Campaign/Form/Search/Survey.php
 msgid "Find Survey"
-msgstr ""
+msgstr "Găsește Sondaj"
 
 #: CRM/Campaign/Form/Search.php
 msgid "Find Respondents To %1"
@@ -325,7 +326,7 @@ msgstr "Configurarează Sondaj"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Survey Dashboard"
-msgstr ""
+msgstr "Panou Sondaj"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Instructions for interviewers"
@@ -371,7 +372,7 @@ msgstr ""
 #: CRM/Campaign/Form/Survey/Questions.php
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Questions"
-msgstr ""
+msgstr "Intrebari"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Create new result set"
@@ -556,7 +557,7 @@ msgstr ""
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaign, survey and petition types and their status"
-msgstr ""
+msgstr "Creează campanie,sondaj și petiție nou și starea lor "
 
 #: CRM/Campaign/Info.php
 msgid "manage campaign"
@@ -600,7 +601,7 @@ msgstr ""
 
 #: CRM/Campaign/Info.php
 msgid "sign CiviCRM Petition"
-msgstr ""
+msgstr "Semnează petiția CiviCRM"
 
 #: CRM/Campaign/Page/AJAX.php
 msgid "Respondent Reserved."
@@ -612,11 +613,11 @@ msgstr ""
 
 #: CRM/Campaign/Page/Campaign.php templates/CRM/Campaign/Form/Campaign.tpl
 msgid "Are you sure you want to delete this Campaign?"
-msgstr ""
+msgstr "Esti sigur ca vrei sa ștergi aceasta campanie ?"
 
 #: CRM/Campaign/Page/Campaign.php CRM/Campaign/Page/DashBoard.php
 msgid "Update Campaign"
-msgstr ""
+msgstr "Update Campania"
 
 #: CRM/Campaign/Page/Campaign.php CRM/Campaign/Page/DashBoard.php
 msgid "Disable Campaign"
@@ -628,7 +629,7 @@ msgstr ""
 
 #: CRM/Campaign/Page/DashBoard.php CRM/Campaign/Page/Survey.php
 msgid "Update Survey"
-msgstr ""
+msgstr "Update Sondaj"
 
 #: CRM/Campaign/Page/DashBoard.php CRM/Campaign/Page/Survey.php
 msgid "Disable Survey"
@@ -656,24 +657,24 @@ msgstr ""
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Sign Petition"
-msgstr ""
+msgstr "Semnează Petiția"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Signatures"
-msgstr ""
+msgstr "Semnaturi"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "List the signatures"
-msgstr ""
+msgstr "Lista semnaturilor"
 
 #: CRM/Campaign/Page/DashBoard.php
 #: templates/CRM/Campaign/Form/Search/Campaign.tpl
 msgid "Search Campaigns"
-msgstr ""
+msgstr "Cauta campanii"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Search Survey"
-msgstr ""
+msgstr "Cauta Sondaje"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "1 Day"
@@ -696,7 +697,7 @@ msgstr ""
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Surveys"
-msgstr ""
+msgstr "Sondaje"
 
 #: CRM/Campaign/Page/DashBoard.php
 msgid "Petitions"
@@ -720,7 +721,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Voted?"
-msgstr ""
+msgstr "Votează?"
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Is Reserved?"
@@ -750,7 +751,7 @@ msgstr ""
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid "You have already signed this petition."
-msgstr ""
+msgstr "Ai semnat deja aceasta petiție."
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
@@ -845,11 +846,11 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
 msgid "Add Petition"
-msgstr ""
+msgstr "Adaugă petiție "
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
 msgid "Petition ID"
-msgstr ""
+msgstr "ID-ul Sondajului"
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
 msgid "Petition Type ID"
@@ -861,13 +862,13 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
 msgid "Search Petitions"
-msgstr ""
+msgstr "Cauta Petitii"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Add Survey"
-msgstr ""
+msgstr "Adaugă Sondaj"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Survey Type ID"
@@ -877,7 +878,7 @@ msgstr ""
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Survey Type"
-msgstr ""
+msgstr "Sondaj Type"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Reserve Each Time"
@@ -889,7 +890,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Search Surveys"
-msgstr ""
+msgstr "Cauta sondaje"
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Result Set for"
@@ -901,7 +902,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Title of the survey."
-msgstr ""
+msgstr "Titlul sondajului"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Opens New Campaign form in a separate window"
@@ -909,7 +910,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "new campaign"
-msgstr ""
+msgstr "campanie noua"
 
 #: templates/CRM/Campaign/Form/Survey/Main.tpl
 msgid "Select the campaign for which survey is created."
@@ -963,7 +964,7 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Survey Report"
-msgstr ""
+msgstr "Raport Sondaj"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 msgid "Vote"
