--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 11:52+0000\n"
+"PO-Revision-Date: 2016-05-24 18:24+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -9696,7 +9696,7 @@ msgstr "Evenement ID"
 
 #: CRM/Core/SelectValues.php
 msgid "Event Title"
-msgstr "Evenement titel"
+msgstr "Titel evenement"
 
 #: CRM/Core/SelectValues.php
 msgid "Event Start Date"
@@ -9740,7 +9740,7 @@ msgstr "URL om te registreren"
 
 #: CRM/Core/SelectValues.php
 msgid "Event Balance"
-msgstr "Evenement Balans"
+msgstr "Saldo evenementkosten"
 
 #: CRM/Core/SelectValues.php
 msgid "Contribution ID"
